--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
          UID: $UID
          GID: $GID
      container_name: 'python3_house_local'
+     restart: always
      working_dir: '/opt/working'
      tty: true
      volumes:
